--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#Withdraw">Withdraw</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#MyBets">My Bets</a>
+        </li>
       </ul>
       <!-- <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="0xAddress" aria-label="Contract Address">
@@ -77,7 +80,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-lg-4 col-md-5 col-sm-12" id="bet-panel">
+      <div class="col-lg-4 col-md-5 col-sm-12 panel" id="bet-panel">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Your bet</h5>
@@ -112,7 +115,7 @@
           </div>
         </div>
       </div>
-      <div style="display: none;" class="col-lg-4 col-md-5 col-sm-12" id="withdraw-panel">
+      <div style="display: none;" class="col-lg-4 col-md-5 col-sm-12 panel" id="withdraw-panel">
         <div class="card" title="You can't withdraw while bets are open.">
           <div class="card-body">
             <h5 class="card-title">Withdraw</h5>
@@ -120,7 +123,8 @@
               <input type="text" id="text-secret" class="form-control" placeholder="Secret" aria-label="Secret"
                 aria-describedby="buttonWithdraw" disabled>
               <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button" id="button-withdraw" style="min-width:8em;" disabled>
+                <button class="btn btn-outline-secondary" type="button" id="button-withdraw" style="min-width:8em;"
+                  disabled>
                   <span id="span-withdraw">Withdraw</span>
                   <div id="div-withdraw-loading" class="loading" style="display:none;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 100 100"
@@ -136,6 +140,31 @@
                 </button>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div style="display: none;" class="col-lg-4 col-md-5 col-sm-12 panel" id="my-bets-panel">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">My Bets</h5>
+            <div id="div-my-bets-loading" class="loading">
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 100 100"
+                preserveAspectRatio="xMidYMid" class="lds-rolling" style="background: none;">
+                <circle cx="50" cy="50" fill="none" ng-attr-stroke="{{config.color}}" ng-attr-stroke-width="{{config.width}}"
+                  ng-attr-r="{{config.radius}}" ng-attr-stroke-dasharray="{{config.dasharray}}" stroke="#93dbe9"
+                  stroke-width="10" r="40" stroke-dasharray="188.49555921538757 64.83185307179586" transform="rotate(8.42436 50 50)">
+                  <animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;360 50 50"
+                    keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite" />
+                </circle>
+              </svg>
+            </div>
+            <div class="bets"></div>
+          </div>
+          <div class="card-footer">
+            <a class="btn btn-outline-secondary" type="button" id="button-withdraw-now" style="display: none;" href="#Withdraw">
+              You won! Withdraw now...
+            </a>
+            <p id="p-my-bets-footer"></p>
           </div>
         </div>
       </div>
